# samp-cef

./: .gitignore  .rustfmt.toml  Cargo.toml  cef-distribution.json  readme.md
.github/workflows/: release.yml  rust.yml
cef-interface/: Cargo.toml
cef-sys/: build.rs
cef-sys/src/: bindings.rs
cef/src/: browser.rs  client.rs  handlers.rs  lib.rs  ref_counted.rs  rust_to_c.rs  scheme.rs  v8.rs
cef/src/handlers/: permission.rs
cef/src/rust_to_c/: client.rs  permission_handler.rs  render_handler.rs  render_process_handler.rs  v8handler.rs
client/: Cargo.toml
client/assets/: HRIR-LICENSE.txt
client/src/: app.rs  audio.rs  crash_logger.rs  external.rs  lib.rs  network.rs  render.rs
client/src/browser/: assets_scheme.rs  cef.rs  client.rs  manager.rs  view.rs
docs/: build.md  main_en.md  main_ru.md
examples/cef150-smoke/: README.md  index.html  mode.pwn  object.html
loader/: Cargo.toml
loader/src/: lib.rs
messages/: Cargo.toml
network/: Cargo.toml
network/src/: client.rs  lib.rs
openmp-component/: Cargo.toml  README.md  build.rs
openmp-component/component/: CMakeLists.txt  CMakePresets.json  copy_cxxbridge_header.cmake
openmp-component/component/src/: component.cpp
openmp-component/src/: lib.rs
renderer/: Cargo.toml
renderer/src/: main.rs
scripts/: build-client-win32.sh  build-openmp-component.sh  clippy-win32.sh  download-cef.mjs  generate-cef-bindings.mjs  package-client.mjs  smoke-http-server.mjs
server/: Cargo.toml
server-core/: Cargo.toml
server-core/src/: client.rs  lib.rs  server.rs
server/src/: lib.rs  utils.rs
utils/: readme.md  wrapper.h
