[package]
name = "cef-interface"
version = "0.1.0"
authors = ["ZOTTCE <zottce@gmail.com>"]
edition = "2024"
rust-version = "1.93"

[lib]
crate-type = ["cdylib"]

[dependencies]
cef = { path = "../cef" }
cef-api = { path = "../cef-api" }
client-api = { git = "https://github.com/zottce/samp-client-api.git", rev = "5e3580d0184922c886116724098eae84bc10cf92" }
region = "3.0.2"
