[package]
name = "samp-cef-openmp"
version = "0.1.0"
authors = ["ZOTTCE <zottce@gmail.com>"]
edition = "2024"
rust-version = "1.93"

[lib]
name = "samp_cef_openmp"
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"
server-core = { path = "../server-core" }

[build-dependencies]
cxx-build = "1.0"
