[package]
name = "cef-openmp"
version = "0.1.0"
authors = ["ZOTTCE <zottce@gmail.com>"]
edition = "2024"
rust-version = "1.93"

[lib]
name = "cef_openmp"
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"
server-core = { path = "../server-core", package = "cef-server-core" }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["fmt", "smallvec"] }

[build-dependencies]
cxx-build = "1.0"
